Cashu: Mint switch + optimization

--- a/locales/en.json
+++ b/locales/en.json
@@ -138,6 +138,7 @@
     "general.selfCustody": "Self-custody",
     "general.ecash": "Ecash",
     "general.preferred": "Preferred",
+    "general.errorConnecting": "Error connecting",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
@@ -1417,10 +1418,13 @@
     "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
     "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
     "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
     "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
     "views.Cashu.CashuPayment.title": "Cashu Payment",
     "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
     "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.ReceiveEcash.receivingTo": "Receiving to",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
     "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
     "stores.CashuStore.pending": "Payment is pending.",
     "androidNotification.lndRunningBackground": "LND is running in the background",
