Cashu: Lightning address

--- a/locales/en.json
+++ b/locales/en.json
@@ -1408,6 +1408,7 @@
     "cashu.mints": "Mints",
     "cashu.mintUrl": "Mint URL",
     "cashu.proofs": "Proofs",
+    "cashu.lightningAddress": "Cashu Lightning address",
     "views.Cashu.AddMint.title": "Add mint",
     "views.Cashu.AddMint.find": "Find a mint",
     "views.Mints.noMints": "No mints added yet",
@@ -1424,6 +1425,8 @@
     "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
     "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
     "views.Cashu.ReceiveEcash.receivingTo": "Receiving to",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
     "stores.CashuStore.startingWallet": "Starting ecash wallet",
     "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
     "stores.CashuStore.pending": "Payment is pending.",
