--- a/locales/en.json
+++ b/locales/en.json
@@ -137,7 +137,6 @@
     "general.approximately": "Approximately",
     "general.selfCustody": "Self-custody",
     "general.ecash": "Ecash",
-    "general.preferred": "Preferred",
     "general.errorConnecting": "Error connecting",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
@@ -1415,8 +1414,8 @@
     "views.Mints.noMints": "No mints added yet",
     "views.Cashu.Mint.supportedNuts": "Supported Nuts",
     "views.Cashu.Mint.removeMint": "Remove mint",
-    "views.Cashu.Mint.preferredMint": "This is your preferred mint",
-    "views.Cashu.Mint.setPreferred": "Set preferred",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
     "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
     "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
     "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
@@ -1425,7 +1424,6 @@
     "views.Cashu.CashuPayment.title": "Cashu Payment",
     "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
     "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
-    "views.Cashu.ReceiveEcash.receivingTo": "Receiving to",
     "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
     "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
     "stores.CashuStore.startingWallet": "Starting ecash wallet",
