Cashu: Mint discovery

--- a/locales/en.json
+++ b/locales/en.json
@@ -1410,7 +1410,9 @@
     "cashu.proofs": "Proofs",
     "cashu.lightningAddress": "Cashu Lightning address",
     "views.Cashu.AddMint.title": "Add mint",
-    "views.Cashu.AddMint.find": "Find a mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
     "views.Mints.noMints": "No mints added yet",
     "views.Cashu.Mint.supportedNuts": "Supported Nuts",
     "views.Cashu.Mint.removeMint": "Remove mint",
